--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/tablet.css" media="(min-width: 930px)">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
-    <title>Document</title>
+<link rel="shortcut icon" href="/assets/icons/batata.svg" type="image/x-icon">
+    <title>Batatabit</title>
 </head>
 <body>
     <header>
