Arreglos en la parte de codigo al momento de llamar algun archivo url, src, etc..

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/img/logo.svg" alt="logo" class="header--logo">
+        <img src=".assets/img/logo.svg" alt="logo" class="header--logo">
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
@@ -129,13 +129,13 @@
     <footer>
         <section class="left">
             <ul>
-                <li><a href="">Linkedin</a></li>
-                <li><a href="">Crunchbase</a></li>
-                <li><a href="">Hackernews</a></li>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
             </ul>
         </section>
         <section class="right">
-            <img src="/assets/img/logo-footer.svg" alt="Logo Babtabit 2020">
+            <img src="./assets/img/logo-footer.svg" alt="Logo Babtabit 2020">
         </section>
     </footer>
 </body>
